--- a/KetNoiChatfuelGoogleDrive.html
+++ b/KetNoiChatfuelGoogleDrive.html
@@ -4,17 +4,56 @@
 		<meta charset="utf-8">
 		<title>Hướng dẫn chatfuel</title>
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+		<style media="screen">
+			.img-responsive {
+				max-width: 50%;
+				margin-bottom: 40px;
+			}
+		</style>
 	</head>
 	<body>
 	<div class="container">
 	<h1>Hướng dẫn kết nối Chatfuel và Google Sheets</h1>
 	<p><b>Cách làm: </b></p>
-	<p> Chatfuel thu thập thông tin khách hàng -> Chuyển thông tin cho hệ thống Intergromat -> Intergromat điền thông tin vào bảng Google Sheets </p>
-	<h2>1. Kết nối Chatfuel và Intergromat</h2>
-
-	<h2>2. Kết nối Intergromat và Google Sheets</h2>
-
+	<p>Nguyên tắc để chuyển thông tin khách hàng từ Chatfuel sang Google Sheets như sau:</p>
+	<p> Chatfuel thu thập thông tin khách hàng -> Chuyển thông tin cho hệ thống Integromat -> Integromat điền thông tin vào bảng Google Sheets </p>
+	<h2>1. Kết nối Chatfuel và Integromat</h2>
+	<h4>Bước 1. Đăng nhập vào Integromat</h4>
+	<p>Vào trang <a href="https://www.integromat.com/">www.integromat.com</a>, trang có giao diện như sau: </p>
+	<img src="img/1-integromat-website.png" class="img-responsive" alt="Trang chủ">
+	<p>Nếu bạn chưa có tài khoản thì ấn <b>Sign up</b> để đăng ký bằng tài khoản Google. Nếu đã có tài khoản thì chọn <b>Sign in</b> </p>
+	<img src="img/2-integromat-login.png" class="img-responsive" alt="Login">
+	<p>Sau khi đăng nhập ta vào giao diện dashboard, chọn <b>Create a new Scenario</b> để tạo kịch bản kết nối.</p>
+	<img src="img/3-integromat-dashboard.png" class="img-responsive" alt="Dashboard">
+	<p>Đến trang chọn Services, ta ấn <b>Continue</b> để bỏ qua</p>
+	<img src="img/4-integromat-chatfuel-selected.png" class="img-responsive" alt="Chatfuel">
+	<h4>Bước 2. Tạo kết nối với Chatfuel</h4>
+	<p>Sau khi vào trang Scenario, bạn click vào ô có dấu hỏi để tạo kết nối, tìm và lựa chọn ứng dụng Chatfuel</p>
+	<img src="img/5-integromat-chatfuel-start-scenario.png" class="img-responsive" alt="Chatfuel">
+	<p>Sau đó bạn chọn JSON Listener:</p>
+	<img src="img/6-integromat-chatfuel-json-listener.png" class="img-responsive" alt="Chatfuel">
+	<p>Bạn click nút <b>Add</b>, đặt tên cho webhook rồi ấn <b>Save</b></p>
+	<img src="img/7-integromat-chatfuel-webhook.png" class="img-responsive" alt="Chatfuel">
+	<p>Sau khi hiện kết quả như bên dưới, bạn ấn <b>Copy address to Clipboard</b> để lưu đường dẫn đã tạo</p>
+	<img src="img/8-integromat-chatfuel-webhook-copy.png" class="img-responsive" alt="Chatfuel">
+	<p>Quay lại Chatfuel, dưới block thu thập thông tin khách hàng, bạn thêm block <b>JSON API</b> để gửi thông tin sang Integromat</p>
+	<p>Bạn lựa chọn method là POST, dán link đã copy vào ô URL, điền các thông tin cần gửi vào ô <b>USER ATTRIBUTES</b> (ví dụ: Tên Khách hàng, Điện thoại, Địa chỉ, v.v..)</p>
+	<img src="img/9-chatfuel-webhook-paste.png" class="img-responsive" alt="Chatfuel">
+	<p>Như vậy là bạn đã hoàn tất bước kết nối từ Chatfuel đến Integromat. Tiếp theo ta sẽ kết nối Integromat và Google Sheets</p>
+	<h2>2. Kết nối Integromat và Google Sheets</h2>
+	<p>Quay lại trang Scenario của Integromat, bạn click vào hình tròn khuyết bên cạnh biểu tượng Chatfuel</p>
+	<img src="img/10-integromat-new-connection.png" class="img-responsive" alt="Chatfuel">
+	<p>Bạn tìm và chọn ứng dụng Google Sheets</p>
+	<img src="img/11-integromat-google-sheets.png" class="img-responsive" alt="Chatfuel">
+	<p>Chọn <b>Add a row</b></p>
+	<img src="img/12-integromat-google-sheets-add-row.png" class="img-responsive" alt="Chatfuel">
+	<p>Sau đó bạn chọn bảng tính Google Sheets lưu thông tin khách hàng và nối từng giá trị với từng cột trong bảng tính, cuối cùng click <b>OK</b></p>
+	<img src="img/13-integromat-match-value.png" class="img-responsive" alt="Chatfuel">
 	<h2>3. Chạy thử</h2>
+	<p>Sau khi hoàn tất, bạn click biểu tượng save để lưu và bật nút kết nối ở chế độ On</p>
+	<img src="img/14-on-connection.png" class="img-responsive" alt="Chatfuel">
+	<p>Như vậy việc kết nối đã hoàn thành, bạn chạy thử  Chatbot, điền thông tin, sau đó kiểm tra Google Sheets. Nếu thông tin lưu thành dòng mới trên Google Sheets là bạn đã thành công.</p>
+	<img src="img/15-success.png" class="img-responsive" alt="Chatfuel">
 	</div>
 	</body>
 </html>
